--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -18,7 +18,7 @@
 <div class="main-section">
     <div class="content-wrapper sponsor-header-content-wrapper">
         <h1 style="text-align:center;"> Thank you to our sponsors! </h1>
-        <h2 style="text-align:center;"> Contact <a href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">acm@mst.edu</a> to join it!</h2>
+        <h2 style="text-align:center; color:rgba(0,0,0,0.54);"> Contact <a style="color:rgba(0,0,160,54);" href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">acm@mst.edu</a> to become one!</h2>
     </div>
 
 
