--- a/ACM_General/home/static/home/css/main.css
+++ b/ACM_General/home/static/home/css/main.css
@@ -17,6 +17,7 @@ html {
     font-size: 1em;
     line-height: 1.4;
     margin: 0;
+    background-color: #f0f0f0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     text-rendering: optimizeLegibility;
