--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -14,12 +14,12 @@
 {% endblock %}
 
 {% block head_javascript %}
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>-->
     <!--<script type="text/javascript" charset="utf-8" src="{% static "/home/js/jquery.leanModal.min.js" %}"></script>-->
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-    <script src="{% static "/home/js/plugins.js" %}"></script>
-    <script src="{% static "/home/js/main.js" %}"></script>
-    <script src="{% static "/home/js/vendor/modernizr-2.8.3.min.js" %}"></script>
+    <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>-->
+    <!--<script src="{% static "/home/js/plugins.js" %}"></script>-->
+    <!--<script src="{% static "/home/js/main.js" %}"></script>-->
+    <!--<script src="{% static "/home/js/vendor/modernizr-2.8.3.min.js" %}"></script>-->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <!--<script>-->
