Mobile support for index, new colors, fixed nav hamburger link to login, added 404 css page to git.

--- a/ACM_General/home/static/home/css/main.css
+++ b/ACM_General/home/static/home/css/main.css
@@ -630,7 +630,8 @@ label:focus {
         display: none;
     }
     .welcome-section {
-        padding-top: 130px;
+        padding-top: 100px;
+        text-align: center;
         margin: 0 !important;
     }
     footer {
