--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -12,7 +12,8 @@
 
 {% block body_content %}
 	<div class="main-section">
-        <div class="content-wrapper">
+        <!--<div class="content-wrapper">-->
+        <div class="event-wrapper">
             <div class="event-card">
                 <a href="{% static  "../../static/home/img/index/STUMPED Poster.jpg" %}" class="flyer-space">
                     <img src="{% static  "../../static/home/img/index/STUMPED Poster.jpg" %}" />
@@ -23,6 +24,8 @@
                     <div><a href="http://siggame.io">Learn More</a></div>
                 </div>
             </div>
+        </div>
+        <div class="event-wrapper">
             <div class="event-card">
                 <a href="{% static  "../../static/home/img/index/2017-4-15 Programming Cup.png" %}" class="flyer-space">
                     <img src="{% static  "../../static/home/img/index/2017-4-15 Programming Cup.png" %}" />
@@ -33,6 +36,8 @@
                     <div><a href="mailto:acm@mst.com?Subject=ACM Sponsorship">Learn More</a></div>
                 </div>
             </div>
+        </div>
+        <div class="event-wrapper">
             <div class="event-card">
                 <a href="{% static  "../../static/home/img/index/2017-04-19-Cantenna.png" %}" class="flyer-space">
                     <img src="{% static  "../../static/home/img/index/2017-04-19-Cantenna.png" %}" />
