--- a/ACM_General/home/static/home/css/index.css
+++ b/ACM_General/home/static/home/css/index.css
@@ -1,12 +1,15 @@
 .main-section {
     /*height: 500px;*/
+    background-color: white;
+    padding-top: 50px;
 }
 
-.main-section .content-wrapper {
-    padding: 70px 0 0 0;
-}
+/*.main-section .content-wrapper {*/
+    /*padding: 70px 0 0 0;*/
+/*}*/
 .event-card {
-    margin: 0 auto 40px auto;
+    margin: 0 auto 0 auto;
+    padding: 20px 0 20px 0;
     width: 100%;
     max-width: 900px;
     height: 400px;
@@ -14,7 +17,10 @@
     /*background-color: white;*/
     border-radius: 0.25rem;
 }
-.event-card:nth-child(even) {
+.event-wrapper:nth-child(even) {
+    background-color: #f0f0f0;
+}
+.event-wrapper:nth-child(even) .event-card {
     flex-direction: row-reverse;
 }
 .flyer-space {
@@ -22,9 +28,16 @@
     margin-right: 40px;
     display: flex;
 }
-.event-card:nth-child(even) .flyer-space {
+.event-wrapper:nth-child(even) .event-card .flyer-space {
     margin-right: 0;
     margin-left: 40px;
+}
+.event-card:nth-child(even) .flyer-info p {
+    padding-right: 0;
+    padding-left: 10px;
+}
+.event-card:nth-child(even) .flyer-info a {
+    margin-left: 10px;
 }
 .flyer-space img {
     height:100%;
@@ -47,6 +60,7 @@
     color: rgba(0,0,0,.54);
     font-size: 15px;
     margin-bottom: 40px;
+    padding-right: 10px;
 }
 .flyer-info a {
     font-size: 14px;
@@ -55,4 +69,40 @@
     background-color: #E9654C;
     padding: 10px 30px;
     border-radius: 25px;
+}
+
+@media (max-width:641px) {
+    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+    .main-section {
+        padding-top: 0 !important;
+    }
+    .event-card {
+        flex-direction: column;
+        height: 700px;
+    }
+    .event-card .flyer-space img {
+        margin: auto;
+    }
+    .flyer-info h2 {
+        margin-left: 0;
+        text-align: center;
+    }
+    .flyer-info p {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .flyer-info a {
+        margin-left: 15px;
+    }
+    .event-wrapper:nth-child(even) .event-card {
+        flex-direction: column !important;
+    }
+    .event-wrapper:nth-child(even) .flyer-space {
+         margin-right: 0;
+         margin-left: 0;
+     }
+    .flyer-space {
+        height:400px;
+        margin-right: 0;
+    }
 }
