--- a/ACM_General/events/static/events/css/create-event.css
+++ b/ACM_General/events/static/events/css/create-event.css
@@ -1,41 +1,69 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 
 body, html {
     font-family: 'Noto Sans', sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
-    background-color: #222222;
+    background-color: white;
 }
 
-.wrapper {
-    margin:auto;
-    height: 100%;
-    width:420px;
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+a {
+    text-decoration: inherit;
+    color: white;
+}
+
+input, textarea, option {
+    font-size: 15px;
+}
+
+.header {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    background-color: blue;
+    width:auto;
+    height:auto;
+    padding:10px;
+    background-color: #241234;
+}
+
+.header-items:last-child {
+    color: white;
+    align-self: flex-end;
+    margin-right: auto;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 40px;
+}
+
+.logo {
+    margin:10px;
+    width:70px;
+    height:70px;
+}
+
+.logo-name {
+    color: white;
+    font-size: 90%;
+    align-self: center;
+}
+
+.event-details {
+    margin: 25px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.create-event{
-    width: 100%;
-    height:540px;
-    border-radius: 16px;
-    display: flex;
-    background-color: white;
-    justify-content:center;
-    align-items: center
-}
-
-h3{
-    text-align: center;
-    position: relative;
-    bottom: 20px;
 }
 
 .flex-item{
     display: flex;
+    margin: 10px;
     padding: 10px 0;
     position: relative;
     bottom: 10px;
@@ -43,17 +71,16 @@ h3{
 
 .field-label{
     flex:1;
+    font-size: 15px;
 }
 
 .field-input{
-    flex:1;
+    flex: 5;
     padding-left: 20px;
 }
 
 input[type="submit"]{
-    display: block;
-    margin: auto;
-    position: relative;
-    top: 30px;
+    margin-top: 35px;
+    margin-left: 120px;
     box-shadow: 1px 0 4px #39B38F;
 }
