--- a/ACM_General/events/templates/events/create-event.html
+++ b/ACM_General/events/templates/events/create-event.html
@@ -15,18 +15,30 @@
 {% endblock %}
 
 {% block body_header %}
+    <div class="header">
+        <div class="logo-name">
+            <a href="/">
+                Association for<br>Computing Machinery
+            </a>
+        </div>
+        <div class="header-items logo">
+            <a href="/">
+                <img src="{% static 'home/img/core/acm.png' %}"></img>
+            </a>
+        </div>
+        <div class="header-items">
+            Create An Event
+        </div>
+    </div>
 {% endblock %}
 
 {% block body_content %}
-    <div class="wrapper">
-        <div class="create-event">
-            <form action="" method="post">
-                {% csrf_token %}
-                <h3>Event Details</h3>
-                {% include "events/form-template.html" %}
-                <input type="submit" value="Submit Event">
-            </form>
-        </div>
+    <div class="event-details">
+        <form action="" method="post">
+            {% csrf_token %}
+            {% include "events/form-template.html" %}
+            <input type="submit" value="Submit Event">
+        </form>
     </div>
 {% endblock %}
 
