[UPDATE] Updated CurrentEvent Abstracts

--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -20,7 +20,11 @@
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Game Presents: Stumped</h2>
-                    <p>Info about Stumped. Way more words here because of the way that space just ends up being completely wasted as of right now.</p>
+                    <p>The sign-ups for MegaMinerAI 19: Stumped are open!
+                    
+                    Gather your team of code-savvy beavers and register at MegaMinerAI.com. The competition is April 8th-9th from noon to noon.
+                    
+                    Registration fee is $24 per team, but includes T-Shirts, food, and possible prizes for you and your teammates!</p>
                     <div><a href="http://siggame.io">Learn More</a></div>
                 </div>
             </div>
@@ -32,7 +36,7 @@
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Comp Presents: ACM Programming Cup</h2>
-                    <p>Info about ACM Programming Cup. Way more words here because of the way that space just ends up being completely wasted as of right now.</p>
+                    <p>Test your programming might against other S&T students battling for greatness in the ACM Programming Cup. See the flier for more details.</p>
                     <div><a href="mailto:acm@mst.com?Subject=ACM Sponsorship">Learn More</a></div>
                 </div>
             </div>
@@ -44,7 +48,7 @@
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Security Presents: Cantenna Build</h2>
-                    <p>Info about Cantenna Build. Way more words here because of the way that space just ends up being completely wasted as of right now.</p>
+                    <p>Build a directional, external antenna for your computer out of a metal can! Then, bring your new cantenna to the wireless security audit on April 22nd where we race around Rolla searching for unsecured wireless networks. Everyone is welcome, but ACM members get priority.</p>
                     <div><a href="https://acmsigsec.mst.edu/talks.html">Learn More</a></div>
                 </div>
             </div>
