[UPDATE] Added 404.html tests and relative url

--- a/ACM_General/core/templates/404.html
+++ b/ACM_General/core/templates/404.html
@@ -76,7 +76,7 @@
     <div class="bottom-content">
         <div class="container">
             <h2>Where ever you were going, you didn't make it.</h2>
-            <a href="http://acm.mst.edu">Home</a>
+            <a href="{% url "home:index" %}">Home</a>
             <a href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">Ask Someone</a>
         </div>
     </div>
