[UPDATE] Updated the Create Event page (w/ other misc. things)
[NOTE] When this commit is merged to master, your Vagrant box will need to be destroyed if you have
inserted Events into the database prior to the pulling of this commit. This is because the new field
“flier”(ImageField) added to Event model has no default value and is also required. Django will
ignore it and not add it to the database since it won’t know what to fill the newly added column with
to the events that are currently in the database (if any).

- Added the new field “flier” to the Event model; enables the user to upload images for fliers when
  creating an event.
- Added to the Vagrant and requirements file modules that were needed for the use of the ImageField
  for uploading images.
- Commented out some things in the rest_api app so that ImageField could be used.
- Added “material_blue” style to calendar
- Added “media/“ to .gitignore file
- Removed unnecessary datetime format specifications for the “date_hosted” and “date_expire” widgets
- Added necessary code in “create_event“ view so that image files can be pulled from the form after a
  post request.
- Added function in “events/models.py” file named “get_path_for_fliers” which is used for creating a
  directory for storing media files. Files are stored in the following manner:
  “media/fliers/<event.date_hosted>/<filename>”. Also, the media folder is stored in the same directory
  as all of the apps much like the static folder.
- MEDIA_URL and MEDIA_ROOT were changed in the Django settings.py file to accommodate for the storage
  of media files.
- Added a fix that makes sure the datetime can only be changed by the calendar and also makes the
  Field required.
- Added a check that makes sure the Event expiration date is after the hosting date of the Event. The
  check is done client side with jQuery and pops up an alert if the error occurs. (Was considering
  having the error appear on the page, but it was hard to work around making the pa

--- a/ACM_General/events/templates/events/create-event.html
+++ b/ACM_General/events/templates/events/create-event.html
@@ -8,13 +8,23 @@
 {% block head_stylesheets %}
     <link rel="stylesheet" type="text/css" href="{% static 'events/css/create-event.css' %}" />
     <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'events/css/material_blue.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'events/css/confirmDate.css' %}" />
 {% endblock %}
 
 {% block head_javascript %}
     <script src="https://unpkg.com/flatpickr"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="{% static 'events/scripts/confirmDate.js' %}"></script>
 {% endblock %}
 
 {% block body_header %}
+
+    <!--
+         The header on the Event Creation page. Items may seem like they're in reverse as to how they appear
+         on the page but that is because I have the items arranged in "row-reverse" order through using FlexBox
+         (tool used for arrangning items on page amongst other things; in the css file).
+    -->
     <div class="header">
         <div class="logo-name">
             <a href="/">
@@ -33,8 +43,10 @@
 {% endblock %}
 
 {% block body_content %}
+
+    <!-- Each of the "Event Details" input fields -->
     <div class="event-details">
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% include "events/form-template.html" %}
             <input type="submit" value="Submit Event">
@@ -44,9 +56,35 @@
 
 {% block body_scripts %}
     <script>
-        flatpickr("#calendar", {
-            enableTime: true,
-            altInput: true
+
+        // Adds the datetime picker "flatpickr"
+        let flatpickr_calendar = new flatpickr("#calendar", {
+                enableTime: true, // Adds time to be chosen by user
+                altInput: true,   // Changes the way the datetime is displayed to the user (looks nicer)
+                utc: true         // Dates are parsed, formatted, and displayed in UTC
+            }
+        );
+
+        // Makes the datetime fields required and also makes the datetime input fields, that have been filled
+        // out by flatpickr, unchangeable. This is essentially the same as having the "required" and "readonly"
+        // set on the datetime input fields. This can't be done with plain HTML though because when "readonly"
+        // is used in HTML on a field, "required" is then ignored.
+        $(".flatpickr-input").attr("required", true);
+        $(".flatpickr-input").attr("readonly", false);
+        $(".flatpickr-input").keydown(function(e){
+            e.preventDefault();
         });
+
+        // Makes sure the date_expire is greater than the date_hosted
+        $("input[type='submit']").click(function(e){
+            let date_expire = $("input[name='date_expire']").val();
+            let date_hosted = $("input[name='date_hosted']").val();
+
+            if (date_hosted > date_expire) {
+                alert("The hosted date can\'t be after the expire date!");
+                e.preventDefault();
+            }
+        });
+
     </script>
 {% endblock %}
