[UPDATE] Updated the front page
- Fixed static references to flier images
- Added box shadows to the flier images. This is done in case the image
  is white and has a white background.

--- a/ACM_General/events/templates/events/create-event.html
+++ b/ACM_General/events/templates/events/create-event.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block head_stylesheets %}
-    <link rel="stylesheet" type="text/css" href="{% static 'events/css/create-event.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "events/css/create-event.css" %}" />
     <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'events/css/material_blue.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "events/css/material_blue.css" %}" />
 {% endblock %}
 
 {% block head_javascript %}
@@ -31,7 +31,7 @@
         </div>
         <div class="header-items logo">
             <a href="/">
-                <img src="{% static 'home/img/core/acm.png' %}"></img>
+                <img src="{% static "home/img/core/acm.png" %}"></img>
             </a>
         </div>
         <div class="header-items">
