--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -3,9 +3,9 @@
 {% load static %}
 
 {% block head_stylesheets %}
-<link rel="stylesheet" href="{% static "/home/css/normalize.css" %}" />
-<link rel="stylesheet" href="{% static "/home/css/main.css" %}" />
-<link rel="stylesheet" href="{% static "/home/css/index.css" %}" />
+<link rel="stylesheet" href="{% static "home/css/normalize.css" %}" />
+<link rel="stylesheet" href="{% static "home/css/main.css" %}" />
+<link rel="stylesheet" href="{% static "home/css/index.css" %}" />
 
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 {% endblock %}
@@ -15,15 +15,15 @@
         <!--<div class="content-wrapper">-->
         <div class="event-wrapper">
             <div class="event-card">
-                <a href="{% static  "../../static/home/img/index/STUMPED Poster.jpg" %}" class="flyer-space">
-                    <img src="{% static  "../../static/home/img/index/STUMPED Poster.jpg" %}" />
+                <a href="{% static "home/img/index/STUMPED Poster.jpg" %}" class="flyer-space">
+                    <img src="{% static "home/img/index/STUMPED Poster.jpg" %}" />
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Game Presents: Stumped</h2>
                     <p>The sign-ups for MegaMinerAI 19: Stumped are open!
-                    
+
                     Gather your team of code-savvy beavers and register at MegaMinerAI.com. The competition is April 8th-9th from noon to noon.
-                    
+
                     Registration fee is $24 per team, but includes T-Shirts, food, and possible prizes for you and your teammates!</p>
                     <div><a href="http://siggame.io">Learn More</a></div>
                 </div>
@@ -31,8 +31,8 @@
         </div>
         <div class="event-wrapper">
             <div class="event-card">
-                <a href="{% static  "../../static/home/img/index/2017-4-15 Programming Cup.png" %}" class="flyer-space">
-                    <img src="{% static  "../../static/home/img/index/2017-4-15 Programming Cup.png" %}" />
+                <a href="{% static "home/img/index/2017-4-15 Programming Cup.png" %}" class="flyer-space">
+                    <img src="{% static "home/img/index/2017-4-15 Programming Cup.png" %}" />
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Comp Presents: ACM Programming Cup</h2>
@@ -43,8 +43,8 @@
         </div>
         <div class="event-wrapper">
             <div class="event-card">
-                <a href="{% static  "../../static/home/img/index/2017-04-19-Cantenna.png" %}" class="flyer-space">
-                    <img src="{% static  "../../static/home/img/index/2017-04-19-Cantenna.png" %}" />
+                <a href="{% static "home/img/index/2017-04-19-Cantenna.png" %}" class="flyer-space">
+                    <img src="{% static "home/img/index/2017-04-19-Cantenna.png" %}" />
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Security Presents: Cantenna Build</h2>
