--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -12,7 +12,8 @@
 
 {% block body_content %}
 	<div class="main-section">
-        <!--<div class="content-wrapper">-->
+		{% include "home/upcoming-events.html" %}
+        <!--<div class="content-wrapper">
         <div class="event-wrapper">
             <div class="event-card">
                 <a href="{% static "home/img/index/STUMPED Poster.jpg" %}" class="flyer-space">
@@ -53,6 +54,7 @@
                 </div>
             </div>
         </div>
+		-->
     </div>
     <div class="sig-section">
         <div class="sig-section-header">
