--- a/ACM_General/core/templates/core/base.html
+++ b/ACM_General/core/templates/core/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
+{% load tz_detect %}
+{% tz_detect %}
 
 {% block html_tag %}<html lang='en'>{% endblock %}
     <head>
@@ -50,8 +52,8 @@
             {% block head_fonts %}
             {% endblock %}
 
-            {% block head_title %} 
-                <title> ACM-General </title> 
+            {% block head_title %}
+                <title> ACM-General </title>
             {% endblock %}
         {% endblock %}
 
