[UPDATES] Updated Events to reflect current events

--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -15,22 +15,6 @@
         <!--<div class="content-wrapper">-->
         <div class="event-wrapper">
             <div class="event-card">
-                <a href="{% static  "../../static/home/img/index/STUMPED Poster.jpg" %}" class="flyer-space">
-                    <img src="{% static  "../../static/home/img/index/STUMPED Poster.jpg" %}" />
-                </a>
-                <div class="flyer-info">
-                    <h2>SIG-Game Presents: Stumped</h2>
-                    <p>The sign-ups for MegaMinerAI 19: Stumped are open!
-                    
-                    Gather your team of code-savvy beavers and register at MegaMinerAI.com. The competition is April 8th-9th from noon to noon.
-                    
-                    Registration fee is $24 per team, but includes T-Shirts, food, and possible prizes for you and your teammates!</p>
-                    <div><a href="http://siggame.io">Learn More</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="event-wrapper">
-            <div class="event-card">
                 <a href="{% static  "../../static/home/img/index/2017-4-15 Programming Cup.png" %}" class="flyer-space">
                     <img src="{% static  "../../static/home/img/index/2017-4-15 Programming Cup.png" %}" />
                 </a>
@@ -48,7 +32,7 @@
                 </a>
                 <div class="flyer-info">
                     <h2>SIG-Security Presents: Cantenna Build</h2>
-                    <p>Build a directional, external antenna for your computer out of a metal can! Then, bring your new cantenna to the wireless security audit on April 22nd where we race around Rolla searching for unsecured wireless networks. Everyone is welcome, but ACM members get priority.</p>
+                    <p>Build a directional, external antenna for your computer out of a metal can! Then, bring your new cantenna to the wireless security audit on April 20th where we race around Rolla searching for unsecured wireless networks. Everyone is welcome, but ACM members get priority.</p>
                     <div><a href="https://acmsigsec.mst.edu/talks.html">Learn More</a></div>
                 </div>
             </div>
