added test for media and officers page. added both as well, soon will be updating officers page from other branch and media page changes in the works.

--- a/ACM_General/home/static/home/css/main.css
+++ b/ACM_General/home/static/home/css/main.css
@@ -113,7 +113,7 @@ textarea {
    ========================================================================== */
 
 html,body {
-    overflow-x:hidden;
+    /*overflow-x:hidden;*/
 }
 
 body {
@@ -152,7 +152,7 @@ header .content-wrapper {
     text-decoration: none;
     height: 80px;
     width: 260px;
-    margin: 7px 0 0 9px;
+    margin: 14px 0 0 14px;
 }
 .acm-logo-button img {
     height: 100%;
@@ -169,7 +169,7 @@ header .content-wrapper {
 
 .welcome-section {
     margin-top: 140px;
-    padding-left: 9px;
+    padding-left: 14px;
     /*width:100%;*/
     color: #fff;
     text-decoration: none;
@@ -415,7 +415,7 @@ label:focus {
 }
 
 .menu {
-    position: absolute;
+    position: fixed;
     z-index: 1000;
     top: 0;
     left: 0;
@@ -429,13 +429,12 @@ label:focus {
     position: absolute;
     right: -60px;
     width: 60px;
-    height: 60px;
-    border-radius: 0 0 4px 0;
+    height: 56px;
     line-height: 0px;
     display: block;
     padding: 0;
     text-indent: -9999px;
-    background: #fff url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/25px 25px no-repeat;
+    background: #f0f0f0 url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/23px 21px no-repeat;
 }
 .menu ul li > label {
     background: url(https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-right-b-128.png) 95% 50%/16px 16px no-repeat;
@@ -444,13 +443,13 @@ label:focus {
     display: block;
     text-align: center;
     padding: 0 20px;
-    line-height: 60px;
+    line-height: 56px;
     text-decoration: none;
     color: #000;
-    transition: background-color .15s;
+    transition: background-color .1s;
 }
 .menu ul li a:hover, .menu ul li label:hover {
-    color: #666;
+    color: #E9654C;
     background-color: #f0f0f0;
 }
 .menu ul {
@@ -508,6 +507,16 @@ label:focus {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.top-bar {
+    display: none;
+    position: fixed;
+    z-index:2;
+    width:100%;
+    height:56px;
+    background-color: #F0F0F0;
+    box-shadow: rgba(0,0,0,.2) 0 4px 4px 0;
 }
 
 /* ==========================================================================
@@ -667,6 +676,9 @@ label:focus {
         display: none;
     }
     #menu-wrapper {
+        display: block;
+    }
+    .top-bar {
         display: block;
     }
     nav img {
