--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -20,41 +20,113 @@
 			<ul class="cards">
         <li class="cards__item">
             <div class="card">
-                <div class="card__image contain" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
-                    <div class="card__title">Officer 1 | Position</div>
-                    <p class="card__text">About them.</p>
-                    <a href="http://tradebot.com/" class="btn btn--block card__btn">Learn More</a>
+                    <div class="card__title">Sammie Bush | President, CCDC Captain</div>
+                    <p class="card__text">Year - Senior<br>Length of Service - 6 Months<br>SIG - ACM General, SIG-Security</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
                 </div>
             </div>
         </li>
         <li class="cards__item">
             <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
-                    <div class="card__title">Officer 2 | Position</div>
-                    <p class="card__text">About them.</p>
-                    <a href="https://www.garmin.com/" class="btn btn--block card__btn">Learn More</a>
+                    <div class="card__title">Sercan Akcay | Vice President</div>
+                    <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - ACM General</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
                 </div>
             </div>
         </li>
         <li class="cards__item">
             <div class="card">
-                <div class="card__image contain" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
-                    <div class="card__title">Officer 3 | Position</div>
-                    <p class="card__text">About them.</p>
-                    <a href="https://www.att.com/" class="btn btn--block card__btn">Learn More</a>
+                    <div class="card__title">Dalton Cole | Secretary, SIG-Comp Chair</div>
+                    <p class="card__text">Year - PhD<br>Length of Service - 2 Years<br>SIG - ACM General, SIG-Comp</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
                 </div>
             </div>
         </li>
         <li class="cards__item">
             <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
-                    <div class="card__title">Officer 4 | Position</div>
-                    <p class="card__text">About them.</p>
-                    <a href="https://www.up.com/" class="btn btn--block card__btn">Learn More</a>
+                    <div class="card__title">Henry Wong | Treasurer</div>
+                    <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - ACM General, SIG-Game</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="cards__item">
+            <div class="card">
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__content">
+                    <div class="card__title">Erik Michalak | SIG-Security Chair</div>
+                    <p class="card__text">Year - Senior<br>Length of Service - 6 Months<br>SIG - SIG-Security</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="cards__item">
+            <div class="card">
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__content">
+                    <div class="card__title">Kevin Schoonover | SIG.com Chair, System Administrator</div>
+                    <p class="card__text">Year - Freshman<br>Length of Service - 6 Months<br>SIG - SIG.com ACM-General</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="cards__item">
+            <div class="card">
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__content">
+                    <div class="card__title">Joseph Kuhn | SIG-Game Chair</div>
+                    <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - SIG Game</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="cards__item">
+            <div class="card">
+{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__content">
+                    <div class="card__title">Cody Roberts | SIG-Lounge Chair</div>
+                    <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - SIG-Lounge</p>
+                    <div class="link_zone">
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                    </div>
                 </div>
             </div>
         </li>
