--- a/ACM_General/home/static/home/css/officers.css
+++ b/ACM_General/home/static/home/css/officers.css
@@ -1,5 +1,5 @@
 .main-section .content-wrapper:nth-of-type(1) {
-    padding-top: 80px;
+    padding-top: 50px;
 }
 
 .main-section .content-wrapper:nth-of-type(2) {
@@ -19,17 +19,13 @@
     margin:0;
 }
 
-@media(min-width: 641px) {
-    .cards__item {
-        width: 50%;
+@media(max-width: 450px) {
+    .btn {
+        font-size: 0.7em;
     }
 }
-@media(min-width: 1000px) {
-    .cards__item {
-        width: 50%;
-    }
-}
-@media(max-width: 640px) {
+
+@media(max-width: 900px) {
     .cards__item {
         width: 100% !important;
     }
@@ -37,24 +33,26 @@
         width: 100%;
     }
 }
-
+.link_zone {
+    display: flex;
+}
 .btn {
     background-color: white;
     border: 1px solid lightgray;
     //border-radius: 1rem;
-    padding: 0.5rem;
+    padding: 0.5rem 0;
     font-weight: bold;
     color: #77A22F;
     text-decoration: none;
-    text-align: center;*/
+    text-align: center;
     /*font-size: .9em;*/
     /*padding-left: 22px;*/
-    }
 }
 
 .btn--block {
     display: block;
-    width: 100%;
+    width: 31%;
+    margin:0 1.1666666px;
 }
 
 .cards {
