--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -56,7 +56,7 @@
                             <a href="{% url "home:calendar" %}">Calendar</a>
                         </li>
                         <li>
-                            <a href="{% url "home:media" %}">Media</a>
+                            <a href="#" class="disabled">Media</a>
                         </li>
                         <li>
                             <a href="{% url "home:officers" %}">Officers</a>
@@ -74,10 +74,10 @@
                     <img src="{% static "/home/img/core/acm.png" %}">
                     <h2 class="acm-text">Association for<br>Computing Machinery</h2>
                     </a>
-                    <h2 class="acm-text"></h2>
 
                     <div class="welcome-section">
                         <h2>Welcome.</h2>
+                    <br>
                         <h1>We are Under Construction.</h1>
                         <!-- <a href="#">Read About Us</a> -->
                     </div>
@@ -95,7 +95,7 @@
                       <img src="{% static "home/img/core/calendar-icon.png"%}"/>
                       <h3>CALENDAR</h3>
                     </a>
-                    <a href="{% url "home:media" %}" class="media-nav nav-button">
+                    <a href="#" class="media-nav nav-button disabled">
                         <img src="{% static "home/img/core/media-icon.png"%}"/>
                         <h3>MEDIA</h3>
                     </a>
